--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "@types/googlemaps": "^3.30.10",
     "bootstrap": "^4.1.1",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
