--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
-    "@types/googlemaps": "^3.30.10",
-    "bootstrap": "^4.1.1",
+    "@types/googlemaps": "^3.30.13",
+    "bootstrap": "^4.1.3",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "mdbootstrap": "^4.5.3",
+    "ngx-cookie-service": "^1.0.10",
     "rxjs": "^6.0.0",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.26"
